--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "mongoose": "^6.2.10",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.15",
     "socket.io": "^4.4.1",
     "validator": "^13.7.0"
